Fix double vertical scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,14 @@ body,
 #root {
   width: 100%;
   max-width: 100%;
+  height: 100%;
   min-height: 100%;
   margin: 0;
   overflow-x: clip;
 }
 
 body {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 #root {
@@ -25,6 +26,7 @@ body {
 }
 
 .App {
+  height: 100%;
   min-height: 100vh;
   width: 100%;
   max-width: 100%;
